Bug 131632 - animation effects are missing features
Summary: animation effects are missing features
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-27 17:01 UTC by Caolán McNamara
Modified: 2020-03-29 12:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2020-03-27 17:01:04 UTC
Description:
scroll through the effects in the animation pane show missing features, e.g. the Direction combobox never becomes active.

Steps to Reproduce:
1. start impress
2. click frame of "click to add title" to select it
3. use sidebar and activate animation
4. use "+" to add an effect
5. entrance is the default, select "box" in the effect list

Actual Results:
The combobox labeled by Direction: doesn't fill or become sensitive

Expected Results:
what should happen here is the combobox labeled by Direction: should get filled in and become active


Reproducible: Always


User Profile Reset: No



Additional Info:
There is a lot of warning output like:

warn:xmloff:1629957:1632669:sax/source/fastparser/fastparser.cxx:1267: unknown element pres:preset-property urn:oasis:names:tc:openoffice:xmlns:presentation:1.0
...

my guess is that 

commit 1fc10944c9964e24361ea8ef87064a21446db571
Date:   Mon Jan 13 20:06:19 2020 +0200

    use FastParser in CustomAnimationPreset

is at fault
Comment 1 Caolán McNamara 2020-03-27 19:59:36 UTC
bibisect claims...

commit 5352d45dd4a04f8f02cf7f6ad4169126d3b3586a
Date:   Tue Feb 18 15:45:08 2020 +0200

    convert AnimationImport to fast-parser APIs
Comment 2 Julien Nabet 2020-03-27 20:02:28 UTC
Anyway, there's indeed a pb with:
https://opengrok.libreoffice.org/xref/core/filter/source/xslt/import/spreadsheetml/spreadsheetml2ooo.xsl?r=ee8f0a10#8866
<i!-- return lowest of three for sorting -->
Comment 3 Julien Nabet 2020-03-27 20:03:28 UTC
Oups! Unrelated with https://gerrit.libreoffice.org/c/core/+/91233.
Sorry for the noise.
Comment 4 Commit Notification 2020-03-29 12:22:27 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dc7f4b0002769308d38e6c6e9b714ef7766d2ae7

tdf#131632 animation effects are missing features

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.