tdf#131632 animation effects are missing features

regression from
    commit 5352d45dd4a04f8f02cf7f6ad4169126d3b3586a
    Date:   Tue Feb 18 15:45:08 2020 +0200
    convert AnimationImport to fast-parser APIs

Change-Id: I7227b122213c877b8ea5db25239eae8151597a8e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/91320
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>